objects/Eligibility__c.object
<CustomObject>
    <fields>
        <fullName>NH_Prob_Pd_Same_For_All_QLI_And_Suffix__c</fullName>
        <inlineHelpText>New Hire Probationary Period (a) Same For Entire Case (b) Different by QLI/Product (c) Different by Suffix/Member</inlineHelpText>
        <label>NH Prob Pd Same For All QLI And Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Different by QLI/Product)</fullName>
                </value>
                <value>
                    <fullName>No (Different by Suffix/Member)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Hire_Coverage_Eff_Date_Eligibility__c</fullName>
        <inlineHelpText>Combined Eligibility Values Cannot Exceed 90 Days Probation Per Aca Mandates</inlineHelpText>
        <label>New Hire Coverage Eff Date Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hire Date</fullName>
                </value>
                <value>
                    <fullName>First Day After Probation</fullName>
                </value>
                <value>
                    <fullName>First of the Month Following Date of Hire</fullName>
                </value>
                <value>
                    <fullName>First of the Month after Probationary Period</fullName>
                </value>
                <value>
                    <fullName>First of the Second Month after Probationary Period</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Hire_Probationary_Period__c</fullName>
        <inlineHelpText>Combined Eligibility Values Cannot Exceed 90 Days Probation Per Aca Mandates</inlineHelpText>
        <label>New Hire Probationary Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>1 Day</fullName>
                </value>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>28 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>40 Days</fullName>
                </value>
                <value>
                    <fullName>42 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>56 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>84 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over_65_Code__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Over 65 code allows members over 65 to be within the insurance</inlineHelpText>
        <label>Over 65 Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>Member in Group is Over 65</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Over 65 Transfer Group</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Over 65 Remain Group</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overage_dep_term_Itrs_be_mailed_to_sub__c</fullName>
        <inlineHelpText>Should Overage Dependent Termination Letters Be Mailed To Subscriber</inlineHelpText>
        <label>Overage Dep Term Letters Mailed to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>G</fullName>
                    <label>G - Mail to Group</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>H - Hold LTRS Only</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>N - No OAD Process</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>P - Pull OAD LTTRS</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <default>true</default>
                    <label>S - Mail to Subr</label>
                </value>
                <value>
                    <fullName>Group</fullName>
                    <isActive>false</isActive>
                    <label>Group</label>
                </value>
                <value>
                    <fullName>Neither</fullName>
                    <isActive>false</isActive>
                    <label>Neither</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>No – not sent to either sub or group</fullName>
                    <isActive>false</isActive>
                    <label>No – not sent to either sub or group</label>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                    <isActive>false</isActive>
                    <label>Subscriber</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Yes – mailed to groups</fullName>
                    <isActive>false</isActive>
                    <label>Yes – mailed to groups</label>
                </value>
                <value>
                    <fullName>Yes – mailed to subscriber</fullName>
                    <isActive>false</isActive>
                    <label>Yes – mailed to subscriber</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prem_Dep_Same_For_All_QLI_And_Suffix__c</fullName>
        <inlineHelpText>% Of Premium Paid For Each Subscriber Dependent Per Month (a) Same For Entire Case (b) Different by QLI/Product (c) Different by Suffix/Member</inlineHelpText>
        <label>% Prem Dep Same For All QLI And Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Different by QLI/Product)</fullName>
                </value>
                <value>
                    <fullName>No (Different by Suffix/Member)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prem_Paid_for_Each_Sub_Dep_per_Month__c</fullName>
        <inlineHelpText>Percentage Of Premiums That The Employer Pays For Each Subscriber&apos;s Dependent Per Month</inlineHelpText>
        <label>% Prem Paid For Each Sub Dep Per Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prem_Paid_for_Each_Sub_per_Month__c</fullName>
        <inlineHelpText>Percentage Of Premiums That The Employer Pays For Each Subscriber Per Month</inlineHelpText>
        <label>% Of Prem Paid For Each Sub Per Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prem_Sub_Same_For_All_QLI_And_Suffix__c</fullName>
        <inlineHelpText>% Of Premium Paid For Each Subscriber Per Month (a) Same For Entire Case (b) Different by QLI/Product (c) Different by Suffix/Member</inlineHelpText>
        <label>% Prem Sub Same For All QLI And Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Different by QLI/Product)</fullName>
                </value>
                <value>
                    <fullName>No (Different by Suffix/Member)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responses_Received_by__c</fullName>
        <label>Responses Received By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_for_Disabled_Verification__c</fullName>
        <label>Responsible For Disabled Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem - Letters go to the Account</fullName>
                </value>
                <value>
                    <fullName>Anthem - Letters go to the Subscriber</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_for_Student_Certification__c</fullName>
        <label>Responsible For Student Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem - Letters go to the Account</fullName>
                </value>
                <value>
                    <fullName>Anthem - Letters go to the Subscriber</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Max_Age_Limit__c</fullName>
        <label>Student Max Age Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Birthday</fullName>
                </value>
                <value>
                    <fullName>End of Birthday Month</fullName>
                </value>
                <value>
                    <fullName>End of Birthday Year</fullName>
                </value>
                <value>
                    <fullName>Other (explain below)</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                    <isActive>false</isActive>
                    <label>Close</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variances_by_package_specify_here__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If You Have A Specific Requirement To Vary The Method By Package, Please Specify Here: (This Must Be Approved By The ID Card Team).</inlineHelpText>
        <label>Variances By Package, Specify Here</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_will_handle_Cal_COBRA_billing__c</fullName>
        <label>Who Will Handle Cal COBRA Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Women_s_Contraceptive_Exemption_Ind__c</fullName>
        <inlineHelpText>Non-grandfathered Employers Are Allowed to Exempt Women’s Contraceptives Benefits. If Yes Then We Will Exclude This Benefit From Coverage And Exempt Type Must Be Filled Out. This Field Was Added for the Wgs System and the Group Load Functionality.</inlineHelpText>
        <label>Women&apos;s Contraceptive Exemption Ind.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Yes - Religious Affiliated Group</fullName>
                </value>
                <value>
                    <fullName>Yes - Religious Employer Group</fullName>
                </value>
                <value>
                    <fullName>Yes - Religious Partial Exemption</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Women_s_Contraceptive_Exemption_Type__c</fullName>
        <inlineHelpText>Only Applicable If Women&apos;s Contraceptive Exemption Indicator = Yes. Determines What Type of Employer Is Excluding These Benefits.This Field Was Added for the Wgs System and the Group Load Functionality.</inlineHelpText>
        <label>Women&apos;s Contraceptive Exemption Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Religious Affiliated Group</fullName>
                </value>
                <value>
                    <fullName>Religious Employer Group</fullName>
                </value>
                <value>
                    <fullName>Religious Partial Exemption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Eligibility</label>
    <nameField>
        <displayFormat>ELIG-{00000}</displayFormat>
        <label>Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility</pluralLabel>
    <recordTypes>
        <fullName>EligibilityCustomerMaster</fullName>
        <active>true</active>
        <label>EligibilityCustomerMaster</label>
    </recordTypes>
    <recordTypes>
        <fullName>EligibilityNASCO</fullName>
        <active>true</active>
        <label>EligibilityNASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>EligibilityWGS</fullName>
        <active>true</active>
        <label>EligibilityWGS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChildMax_Age_and_Rule_Details_Required</fullName>
        <active>true</active>
        <description>Child Max Age Limit Validation
Age and Rule Details should be provided if Define Age and Rule per Package/Suffix is selected as ‘Other ’.</description>
        <errorConditionFormula>ISPICKVAL(Define_Age_and_Rule_per_Package_Suffix__c, &apos;Other&apos;) &amp;&amp; ISBLANK(Age_and_Rule_Details__c)&amp;&amp;
$Profile.Name &lt;&gt;&apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>Age_and_Rule_Details__c</errorDisplayField>
        <errorMessage>Age and Rule Details should be provided if Define Age and Rule per Package/Suffix is selected as ‘Other ’.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Eligibiity_VR01_Do_Not_Create_More</fullName>
        <active>false</active>
        <errorConditionFormula>Group__r.Eligibility_Count__c &gt; 1</errorConditionFormula>
        <errorMessage>Please do not create another Eligibility record when already one exists</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Information_not_for_all_groupsValidation</fullName>
        <active>true</active>
        <description>Please specify if this information does not apply to all groups.</description>
        <errorConditionFormula>ISPICKVAL( Does_this_information_apply_to_all_group__c , &apos;No&apos;)&amp;&amp; ISBLANK(If_No_please_specify__c)&amp;&amp;
$Profile.Name &lt;&gt;&apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>If_No_please_specify__c</errorDisplayField>
        <errorMessage>Please specify if this information does not apply to all groups.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Student_Age_and_Rule_Details_Required</fullName>
        <active>true</active>
        <description>Student Max Age Limit validation
Age and Rule Details should be provided if Define Age and Rule per Package/Suffix is selected as ‘Other ’</description>
        <errorConditionFormula>ISPICKVAL( Define_Age_and_Rule_per_Package_SuffixSt__c , &apos;Other&apos;) &amp;&amp; ISBLANK( Age_and_Rule_DetailsStudent__c )&amp;&amp;
$Profile.Name &lt;&gt;&apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>Age_and_Rule_DetailsStudent__c</errorDisplayField>
        <errorMessage>Age and Rule Details should be provided if Define Age and Rule per Package/Suffix is selected as ‘Other ’.</errorMessage>
    </validationRules>
</CustomObject>